--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+u-boot (2010.06~rc1-2) unstable; urgency=low
+
+  * Produce u-boot.bin on i386.
+  * Switch mipsel target to AMD DBAu1100.
+  * Add marvell-machtypes.diff.
+
+ -- Clint Adams <schizo@debian.org>  Mon, 31 May 2010 22:09:29 -0400
+
 u-boot (2010.06~rc1-1) unstable; urgency=low
 
   * Add Vcs-Git and Vcs-Browser headers.
