--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+u-boot (2010.09~rc1-2) unstable; urgency=low
+
+  * Add patch from Gérald Kerma to add Sheevaplug mvsata support.
+  * Add patch from Gérald Kerma to add Sheevaplug mvsdio support.
+
+ -- Clint Adams <schizo@debian.org>  Sun, 12 Sep 2010 11:48:22 -0400
+
 u-boot (2010.09~rc1-1) unstable; urgency=low
 
   * New upstream release candidate.
