--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+u-boot (2010.12~rc2-1ubuntu1) natty; urgency=low
+
+  * rules: the upstream build passes LDFLAGS directly to ld instead of calling
+    gcc for linking; so instead of passing -Wl,foo in LDFLAGS as in automake
+    builds, one should set LDFLAGS to foo directly; add a snippet to strip
+    -Wl, from LDFLAGS; alternatively, we could do as in other special packages
+    like the kernel and simply unset LDFLAGS entirely.
+
+ -- Loïc Minier <loic.minier@linaro.org>  Mon, 20 Dec 2010 10:29:25 +0100
+
 u-boot (2010.12~rc2-1) unstable; urgency=low
 
   * New upstream release candidate.
