--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+u-boot (2010.12-1ubuntu2) natty; urgency=low
+
+  * Update uboot-mkimage Breaks/Replaces to Ubuntu's version: 0.4build1; fixes
+    upgrades.
+
+ -- Loïc Minier <loic.minier@linaro.org>  Sat, 08 Jan 2011 14:12:01 +0100
+
 u-boot (2010.12-1ubuntu1) natty; urgency=low
 
   [ Oliver Grawert ]
