--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+u-boot (2011.06~rc3-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Clint Adams <clint@debian.org>  Sat, 02 Jul 2011 15:50:46 -0400
+
 u-boot (2011.06~rc2-2) unstable; urgency=low
 
   * Fix mipsel endianness problem again.
@@ -7,7 +13,7 @@ u-boot (2011.06~rc2-2) unstable; urgency=low
 
 u-boot (2011.06~rc2-1) unstable; urgency=low
 
-  * New upstream version. 
+  * New upstream version.
   * Fix tools config selection.
 
  -- Clint Adams <clint@debian.org>  Tue, 14 Jun 2011 20:53:07 -0400
