--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+u-boot (2011.06-1) unstable; urgency=low
+
+  * New upstream version.
+  * Fix i386 and mipsel builds.
+
+ -- Clint Adams <clint@debian.org>  Sat, 02 Jul 2011 19:25:28 -0400
+
 u-boot (2011.06~rc3-1) unstable; urgency=low
 
   * New upstream version.
