--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+u-boot (2011.12-2) unstable; urgency=low
+
+  [ Loïc Minier ]
+  * Build u-boot.imx for efikasb on armhf
+
+  [ Clint Adams ]
+  * Patch from Ian Campbell to fix Dreamplug breakage.  closes: #655102.
+
+ -- Clint Adams <clint@debian.org>  Sun, 08 Jan 2012 15:11:03 -0500
+
 u-boot (2011.12-1) unstable; urgency=low
 
   * New upstream version.
