--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+u-boot (2014.04-2) unstable; urgency=medium
+
+  * Fix FTBFS on powerpc by not setting CROSS_COMPILE when empty. 
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Mon, 26 May 2014 11:32:49 -0700
+
 u-boot (2014.04-1) unstable; urgency=low
 
   [ Steve Langasek ]
