--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+u-boot (2014.04+dfsg1-2) unstable; urgency=medium
+
+  * Enable udoo_quad target, with patch improving the udoo_quad boot
+    environment. Thanks to Michael Fladischer! (Closes: #753376).
+  * Enable Cubieboard target and patches.
+  * Update lintian overrides.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Wed, 09 Jul 2014 12:37:12 -0700
+
 u-boot (2014.04+dfsg1-1) unstable; urgency=medium
 
   [ Vagrant Cascadian ]
