--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+u-boot (2014.10~rc3+dfsg1-2) experimental; urgency=medium
+
+  [ Ian Campbell ]
+  * Add support for the Arndale board (Closes: #763186).
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Thu, 09 Oct 2014 11:41:31 -0700
+
 u-boot (2014.10~rc3+dfsg1-1) unstable; urgency=medium
 
   * New upstream release candidate.
