--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+u-boot (2014.10+dfsg1-3) unstable; urgency=medium
+
+  * cubox-i-support.diff: Refresh patch, dropping solidrun.bmp, which
+    causes FTBFS with newer version of patch (Closes: #777518).
+
+  * Add patch to support A20-OLinuXino-LIME2, backported from u-boot
+    2015.01. Thanks to Karsten Merker for the patch (Closes: #777466).
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Sat, 21 Feb 2015 13:13:31 -0800
+
 u-boot (2014.10+dfsg1-2.1) unstable; urgency=medium
 
   * Non-maintainer upload.
@@ -13,7 +23,7 @@ u-boot (2014.10+dfsg1-2) unstable; urgency=medium
   * Resync cubox-i patches with github.
     - fixes support for booting on the cubox-i2ultra/i2ex.
       (Closes: #766266)
-
+  
   [ Vagrant Cascadian ]
   * wandboard, cubox-i: Add patches to use variables expected by
     debian-installer bootscript.
@@ -53,7 +63,7 @@ u-boot (2014.10~rc3+dfsg1-1) unstable; urgency=medium
   * Remove patches applied upstream:
     - bootcmd-scsi-scan-before-scsi.patch
     - sunxi/0001-sun7i-Add-support-for-Olimex-A20-OLinuXino-LIME.patch
-  * Refresh patches:
+  * Refresh patches:  
     - am335x-bootscript.diff
     - am335x-uenv.txt.diff
     - cubox-i/cubox-i-support.diff
@@ -105,11 +115,11 @@ u-boot (2014.10~rc2+dfsg1-2~exp1) experimental; urgency=medium
     - Enable A20-OLinuXino-LIME target.
     - Disable mx6_cubox-i
     - Disable efikamx and efikasb.
-
+  
   * debian/patches:
     - Add patch from upstream to support A20-OLinuXino-LIME.
     - Disable patches for cubox-i.
-
+  
   * debian/rules:
     - Remove excess conditional architecture check, drop build-dep on
       dctrl-tools.
@@ -122,23 +132,23 @@ u-boot (2014.10~rc2+dfsg1-2~exp1) experimental; urgency=medium
 u-boot (2014.10~rc2+dfsg1-1) experimental; urgency=medium
 
   * New upstream release candidate.
-
+  
   * Update debian/patches:
     - Remove Cubieboard and Cubietruck patches, applied upstream.
     - Remove kerma-sheevaplug-mvsdio patch, applied upstream.
     - Update openrd-mmc patch, partially applied upstream.
     - Add patch to workaround failure when building env tools.
-
+  
   * [armhf] Add Bananapi target.
 
   * debian/rules:
     - Install fw_printenv and fw_setenv symlink in platform-specific dir.
     - Create include/config/auto.conf to allow tools-only target to build.
     - Update to use defconfig target rather than config target.
-
+  
   * debian/copyright:
     - Update Files-Excluded as some files were removed upstream.
-
+  
   * Updated lintian overrides.
 
  -- Vagrant Cascadian <vagrant@debian.org>  Wed, 03 Sep 2014 23:28:59 -0700
@@ -246,7 +256,7 @@ u-boot (2014.04-1) unstable; urgency=low
     - Build target "tools-only".
     - Drop special-casing of MLO, add MLO to debian/targets.
   * debian/patches/cubox-i-raw-initrd.diff:
-    - Patch to support raw initrd on cubox-i.
+    - Patch to support raw initrd on cubox-i. 
   * debian/watch: Use http.
   * debian/control: Bump Standards-Version to 3.9.5, no changes needed.
 
@@ -267,8 +277,8 @@ u-boot (2014.01-2) unstable; urgency=medium
 
 u-boot (2014.01-1) unstable; urgency=low
 
-  * New upstream version.
-  * Updated patches.
+  * New upstream version. 
+  * Updated patches. 
   * debian/watch: Update to catch -rc versions.
   * debian/control: Update Vcs-* headers.
   * u-boot-tools: Strip comment sections from mkimage and fw_printenv.
