--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+u-boot (2015.10+dfsg1-2~exp1) experimental; urgency=medium
+
+  * Build rockchip package, with firefly-rk3288 as the initial
+    target. Thanks to Emilio Pozuelo Monfort and Sjoerd Simons.
+    (Closes: #803166).
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Mon, 02 Nov 2015 07:59:36 -0800
+
 u-boot (2015.10+dfsg1-1) unstable; urgency=medium
 
   [ Vagrant Cascadian ]
