--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+u-boot (2016.03+dfsg1-2) unstable; urgency=medium
+
+  * Apply patch from upstream to fix gmac ethernet on sunxi
+    systems. (Closes: #818621). Thanks to Karsten Merker for the report.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Mon, 28 Mar 2016 19:52:45 -0700
+
 u-boot (2016.03+dfsg1-1) unstable; urgency=medium
 
   * New upstream release.
