--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+u-boot (2016.03+dfsg1-3) unstable; urgency=medium
+
+  * u-boot-omap:
+    - Remove ti-u-boot patches, which are no longer needed.
+    - Update am57xx support for distro bootcmd.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Mon, 04 Apr 2016 11:23:06 -0700
+
 u-boot (2016.03+dfsg1-2) unstable; urgency=medium
 
   * Apply patch from upstream to fix gmac ethernet on sunxi
