--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+u-boot (2016.03+dfsg1-4) unstable; urgency=medium
+
+  * Add patch to fix detected ram size on Firefly boards by reverting
+    "rockchip: rk3288: correct sdram setting".
+  * debian/control: Updated Standards-Version to 3.9.8, no changes needed.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Sat, 16 Apr 2016 15:33:22 -0700
+
 u-boot (2016.03+dfsg1-3) unstable; urgency=medium
 
   * u-boot-omap:
