--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+u-boot (2016.03+dfsg1-6ubuntu2~1.2) yakkety-security; urgency=medium
+
+  * No-change rebuild to get last set of changes into the security
+    pocket for the linux-raspi2 kernel (LP: #1657395).
+
+ -- Steve Beattie <sbeattie@ubuntu.com>  Mon, 23 Jan 2017 09:42:41 -0800
+
 u-boot (2016.03+dfsg1-6ubuntu2~1.1) yakkety; urgency=medium
 
   * From upstream u-boot: (LP: #1636838)
