--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+u-boot (2016.11+dfsg1-4) unstable; urgency=medium
+
+  [ Vagrant Cascadian ]
+  * [armel] Apply a patch from upstream to fix openrd targets which failed
+    to boot, and re-enable the openrd targets (Closes: #856441). Thanks to
+    Albert ARIBAUD for the patch, Martin Michlmayr for pointing out the
+    patch, and Phil Hands and Rick Thomas for testing on various openrd
+    platforms.
+
+  [ Martin Michlmayr ]
+  * u-boot-rpi: typo in README.Debian (Closes: #858574).
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Mon, 27 Mar 2017 14:39:51 -0400
+
 u-boot (2016.11+dfsg1-3) unstable; urgency=medium
 
   [ Peter Michael Green ]
