--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+u-boot (2017.09+dfsg1-3) unstable; urgency=medium
+
+  * Set the fdtfile variable from the value of CONFIG_DEFAULT_DEVICE_TREE
+    (Closes: #870897). Thanks to Diego Roversi for the bug report!
+  * Add patch to fix building jffs2 with gcc-7 (Closes: #877963). Thanks
+    to Adrian Bunk!
+  * Update Standards-Version of Debian Policy 4.1.1, no changes needed.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Mon, 09 Oct 2017 15:14:03 -0700
+
 u-boot (2017.09+dfsg1-2) unstable; urgency=medium
 
   * u-boot-imx: mx6cuboxi4x4: Use a symlink for u-boot.img to mx6cuboxi,
@@ -9,7 +19,7 @@ u-boot (2017.09+dfsg1-2) unstable; urgency=medium
   * debian/rules: Do not install uboot.elf in mx6cuboxi4x4 target.
   * debian/rules: Only build the SPL target on mx6cuboxi4x4.
   * debian/patches: Fix odroid patch to actually use distro_bootcmd.
-  * u-boot-rockchip: Fix USB on firefly-rk3399 with patches from usptream.
+  * u-boot-rockchip: Fix USB on firefly-rk3399 with patches from upstream.
   * u-boot-exynos: Add patch to fix "console" environment variable
     (Closes: #877074). Thanks to Peter Lebbing!
 
