--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+u-boot (2018.11+dfsg-2) unstable; urgency=medium
+
+  * u-boot-install-sunxi64:
+    - Detect target based on running device-tree.
+    - Prefer BL31 from arm-trusted-firmware over atf-allwinner.
+    - Error out when mkimage is not found and Recommend u-boot-tools
+      (Closes: #913879).  Thanks to Nicolas Schier.
+  * [arm64] u-boot-sunxi: Update Recommends to use arm-trusted-firmware
+    instead of atf-allwinner.
+  * [arm64] u-boot-amlogic: Add Recommends on arm-trusted-firmware.
+  * Update upstream signing key.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Sun, 09 Dec 2018 08:16:44 +0100
+
 u-boot (2018.11+dfsg-1) unstable; urgency=medium
 
   * New upstream release.
