--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+u-boot (2019.01+dfsg-1) unstable; urgency=medium
+
+  * New upstream release (Closes: #918940).
+  * Update tester for firefly-rk3288.
+  * debian/control: Build-Depends: use debhelper-compat.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Mon, 14 Jan 2019 16:36:19 -0800
+
 u-boot (2019.01~rc3+dfsg-1) experimental; urgency=medium
 
   * New upstream release candidate.
