--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+u-boot (2019.01+dfsg-4) unstable; urgency=medium
+
+  [ Martyn Welch ]
+  * [armhf] u-boot-imx: Enable build for NXP SABRE Lite.
+
+  [ Neil Armstrong ]
+  * [arm64] u-boot-amlogic: Enable nanopi-k2 and khadas-vim/vim2.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Mon, 08 Apr 2019 19:47:02 -0700
+
 u-boot (2019.01+dfsg-3) unstable; urgency=medium
 
   [ Romain Perier ]
