--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+u-boot (2019.07~rc1+dfsg-4) experimental; urgency=medium
+
+  [ Vagrant Cascadian ]
+  * u-boot-qemu: qemu-riscv64: Patch to support loading FDT in extlinux.
+  * Add patches to enable PocketBeagle support to am335x_evm target.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Sun, 12 May 2019 20:38:27 -0700
+
 u-boot (2019.07~rc1+dfsg-3) experimental; urgency=medium
 
   * debian/rules: Fail when cross-compiler for an arch:all build is not
@@ -93,6 +101,35 @@ u-boot (2019.04+dfsg-1) experimental; urgency=medium
     with FIT images used in the wild, and breaks the test suite.
 
  -- Vagrant Cascadian <vagrant@debian.org>  Mon, 08 Apr 2019 23:35:43 -0700
+
+u-boot (2019.01+dfsg-6) unstable; urgency=medium
+
+  [ Domenico Andreoli ]
+  * Enable support for NanoPi NEO 2 in u-boot-sunxi (Closes: #928612).
+
+  [ Jonas Smedegaard ]
+  * Sync sunxi teres-i patch with mainline u-boot, enabling USB
+    support (Closes: #928815).
+
+  [ Vagrant Cascadian ]
+  * Apply patch from upstream fixing buffer overflow with ext4 filesystems
+    (CVE-2019-11059, Closes: #928800).
+  * Apply patch from upstream fixing randomly generated
+    UUIDs. (CVE-2019-11690, Closes: #928557).
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Sat, 11 May 2019 18:20:19 -0700
+
+u-boot (2019.01+dfsg-5) unstable; urgency=medium
+
+  [ Jonas Smedegaard ]
+  * Add patch cherry-picked upstream to add i2c initialization for sun50i.
+  * Add patch by Vasily Khoruzhick to support Olimex Teres-I DIY laptop.
+  * Enable teres_i target in u-boot-sunxi (Closes: #926040).
+
+  [ Frédéric Danis ]
+  * Enable orangepi_zero_plus2 target in u-boot-sunxi (Closes: #927224).
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Fri, 19 Apr 2019 16:43:08 -0700
 
 u-boot (2019.01+dfsg-4) unstable; urgency=medium
 
